Review #3 - Java 17 버전으로 맞추기
21 버전 코드를 17 버전 코드로 변경